--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
----
-# Project: Personal Website with Language Landing Page
-
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome | Iman Aghahakim</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --accent: #b84c3a;
-      --text-color: #222;
-      --bg-color: #fff;
+    body {
+      margin:0;
+      padding:0;
+      font-family: 'Times New Roman', Times, serif;
+      background-color: #000000;
+      color: #ffffff;
+      height:100vh;
+      display:flex;
+      justify-content:center;
+      align-items:center;
     }
-    * { box-sizing: border-box; margin:0; padding:0; }
-    body { font-family: 'Inter', sans-serif; background-color: var(--bg-color); color: var(--text-color); height:100vh; display:flex; justify-content:center; align-items:center; }
     .container { text-align:center; }
-    h1 { font-family: 'Playfair Display', serif; font-size:2.5rem; margin-bottom:2rem; color: var(--accent); }
-    .lang-btn { padding:1rem 2rem; margin:0 1rem; font-size:1.2rem; border:2px solid var(--accent); background:none; color: var(--accent); cursor:pointer; border-radius:5px; transition:0.3s; }
-    .lang-btn:hover { background: var(--accent); color:#fff; }
+    .lang-btn {
+      padding:1rem 2rem;
+      font-size:1.5rem;
+      border:none;
+      background:none;
+      color:#ffffff;
+      cursor:pointer;
+    }
+    .lang-btn:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Welcome / خوش آمدید</h1>
     <button class="lang-btn" onclick="location.href='en.html'">English</button>
-    <button class="lang-btn" onclick="location.href='fa.html'">فارسی</button>
   </div>
 </body>
 </html>
