--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
       justify-content:center;
       align-items:center;
     }
-    .container { text-align:center; }
+    .container {
+      text-align:center;
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .intro {
+      font-size:1.2rem;
+      color:#ffffff;
+      margin-bottom:2rem;
+      max-width: 600px;
+    }
     .lang-btn {
       padding:1rem 2rem;
       font-size:1.5rem;
@@ -32,6 +44,7 @@
 </head>
 <body>
   <div class="container">
+    <span class="intro">hi, I'm Iman Aghahakim and i write my brain storming thought here. usually about philosophy</span>
     <button class="lang-btn" onclick="location.href='en.html'">English</button>
   </div>
 </body>
