--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div class="container">
-    <span class="intro">hi, I'm Iman Aghahakim and i write my brain storming thought here. usually about philosophy</span>
+    <span class="intro">Hi, I'm Iman Aghahakim and i write my brain storming thought here. usually about philosophy</span>
     <button class="lang-btn" onclick="location.href='en.html'">English</button>
   </div>
 </body>
